# InterviewPracticeApp

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  speech.py  tech_interview_app.py
.devcontainer/: devcontainer.json
utils/: system_prompt.py  utilities.py
