[project]
name = "interview-practice-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Andriy852",email = "andrijzurba79@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai (==1.63.2)",
    "streamlit (==1.42.2)",
    "pymupdf (==1.25.3)",
    "streamlit-mic-recorder (==0.0.8)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
